06. Sep. 2012 - amo -  changed inner and outer locking of component in worker threads; inner locking replaced by wait/notify. At the end on nonJavaFX thread a wait starts... when JavaFX application Thread finishes he notifies so execution loop can proceed. Outer loop: semaphore replaces an atomic boolean lock
28. Aug. 2012 - amo -  Created  process to Shutdown all JacpFX correct; Created ShutdownUtil class; set name of JacpFX Threads
26. Jun. 2012 - amo -  updated refresh behavior when switching between components
31. Mai. 2012 - amo -  added resourceBundle and locale handling to declarative components
30. Mai. 2012 - amo -  removed AFXMLComponent and add behavior to AFXComponent 
29. Mai. 2012 - amo -  add checkable class that can be implemented by components where the state should not be changed after initilaisation; implemented FXML perspective handling. Add PerspectiveLayout abstract class to handle FXPerspectiveLayout and FXMLPerspectiveLayout.
23. Mai. 2012 - amo -  switch to JavaFX 2.2
21. Mai. 2012 - amo -  add missing source and target ID when throw exception if component was not found
20. Mai. 2012 - amo -  Add support for FXML components, add FXMLReplace worker due to differences with FXComponents
10. Apr. 2012 - amo -  OnStart annotation on Perspective level implemented... TODO: implement on Teardown in FXWorkbenchHandler !!
10. Apr. 2012 - amo -  OnStart and OnTeardown annotations for Components implemented AFXComponent do not extend IEXtended component anymore (no need to implement onStart/OnTeardown) instead annotate methods 
09. Apr. 2012 - amo -  add annotation handling in workbench for perspectives
08. Apr. 2012 - amo -  AFXPerspective extends from AComponent
08. Apr. 2012 - amo -  AFXComponent extends from ASubComponent
08. Apr. 2012 - amo -  AComponent and ASubComponent extracted
08. Apr. 2012 - amo -  Worker classes moved to worker package