@@ -262,7 +262,7 @@ public class FXWorkbenchHandler implements
 		} // End if
 		else {
 			this.log("3.4.3.1: perspective handle with default >>init<< action");
-			perspective.handlePerspective(new FXAction(perspective.getId(), perspective.getId(), "init"));
+			perspective.handlePerspective(new FXAction(perspective.getId(), perspective.getId(), "init", null));
 		} // End else
 	}
 	
